--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -8,8 +8,8 @@
     <nav class="menu">
         <ul class="menu-list">
             <li class="menu-item">
-                <a class="menu-link" href="#">
-                    Link 1
+                <a class="menu-link" href="{% url 'contact:create' %}">
+                    Create
                 </a>
             </li>
             <li class="menu-item">
@@ -27,7 +27,9 @@
             placeholder="Search"
             type="search"
             id="search"
-            name="q">
+            name="q"
+            value="{{ request.GET.q.strip }}"
+            >
         </form>
     </div>
 </header>
