--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -1,5 +1,5 @@
 {% extends 'global/base.html'%}
-
+{% load static %}
 {% block content %} 
 
 <div class="single-contact">
@@ -12,6 +12,57 @@
     <p><b>Created Date:</b> {{ contact.created_date }}</p>
     <p><b>Description:</b> {{ contact.description }}</p>
     <p><b>Category:</b> {{ contact.category.name }}</p>
+
+    {% if contact.picture %}
+    <p>
+        <img src="{{ contact.picture.url }}" alt="{{ contact.firt_name }} {{ contact.last_name }}">
+    </p>
+    {% endif %}
+
+    <div class="contact-links" style="margin-block: calc(var(--small-font-size) * 2);
+    display: flex;
+    align-items: center;
+    gap: 0 var(--spacing);"> 
+
+        <a class="btn btn-link" href="{% url 'contact:update' contact.id %}"
+        style="font-size: var(--small-font-size);
+        text-decoration: none;
+        font-weight: bold;
+        padding: 1rem;
+        display: block;
+        line-height: var(--small-font-size);">
+            Update
+        </a>
+
+        <form action="{% url 'contact:delete' contact.id %}" method="POST">
+            {% csrf_token %}
+
+            {% if confirmation == 'no' %}
+                <input type="hidden" name="confirmation" value="yes">
+                <button class="btn btn-link btn-delete" type="submit"
+                style="font-size: var(--small-font-size);
+                text-decoration: none;
+                font-weight: bold;
+                padding: 1rem;
+                display: block;
+                line-height: var(--small-font-size);
+                background-color: tomato;">
+                    Confirm?
+                </button>
+            {% else %}
+                <button class="btn btn-link btn-delete" type="submit"
+                style="font-size: var(--small-font-size);
+                text-decoration: none;
+                font-weight: bold;
+                padding: 1rem;
+                display: block;
+                line-height: var(--small-font-size);
+                background-color: tomato;">
+                    Delete
+                </button>
+            {% endif %}
+        </form>
+    </div>
 </div>
 
 {% endblock content%}
